--- a/ventas.html
+++ b/ventas.html
@@ -14,7 +14,7 @@
 <body class="bg-gray-100">
     <div id="root"></div>
     <script type="text/babel">
-        const API_URL = 'https://distriapi.onzacore.site';
+        const API_URL = 'https://distriapi.onzacore.site/api';
         const PackageIcon = (props) => (<svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M16.5 9.4a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0Z"/><path d="M19 13.3a9 9 0 1 1-14 0"/><path d="M12 17.5a2.5 2.5 0 0 1-2.5-2.5V9.4h5v5.6a2.5 2.5 0 0 1-2.5 2.5Z"/></svg>);
         const Spinner = ({ className }) => (<div className={`animate-spin rounded-full h-6 w-6 border-b-2 ${className || 'border-white'}`}></div>);
         const UsersIcon = (props) => (<svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>);
@@ -399,7 +399,8 @@
               const token = localStorage.getItem('vendedor_token');
               const isOnline = navigator.onLine;
 
-              if (isOnline && token && !clienteData.id?.toString().startsWith('local_')) {
+              // CORRECTION: Replaced optional chaining with a standard truthy check
+              if (isOnline && token && clienteData.id && !clienteData.id.toString().startsWith('local_')) {
                   try {
                       const url = clienteData.id ? `${API_URL}/clientes/${clienteData.id}` : `${API_URL}/clientes`;
                       const method = clienteData.id ? 'PUT' : 'POST';
@@ -499,15 +500,25 @@
               return <LoginPage onLogin={handleLogin} loading={loading} error={error} />;
           }
 
+          if (currentPage === 'clientes') {
+              return <ClientesView onBack={() => setCurrentPage('home')} onSelectCliente={handleSelectCliente} onEditCliente={(c) => { setEditingCliente(c); setCurrentPage('cliente_form'); }} onAddCliente={() => { setEditingCliente(null); setCurrentPage('cliente_form'); }} />;
+          }
+          if (currentPage === 'cliente_form') {
+              return <ClienteFormView onBack={() => setCurrentPage('clientes')} cliente={editingCliente} onSave={handleSaveCliente} />;
+          }
+          if (currentPage === 'pedido' && selectedCliente) {
+              return <PedidoView cliente={selectedCliente} onBack={(cart) => { setCurrentPedido(cart); setCurrentPage('clientes'); }} onShowCart={(pedido) => { setCurrentPedido(pedido); setCurrentPage('summary'); }} cart={currentPedido} onProductSelect={handleProductSelect} />;
+          }
+          if (currentPage === 'summary' && selectedCliente) {
+              return <PedidoSummaryView cliente={selectedCliente} pedido={currentPedido} setPedido={setCurrentPedido} onBack={(cart) => { setCurrentPedido(cart); setCurrentPage('pedido'); }} onSave={handleSavePedido} editingPedido={editingPedido} onCancelEdit={handleCancelEdit} onAddMoreProducts={(cart) => { setCurrentPedido(cart); setCurrentPage('pedido'); }} />;
+          }
+          if (currentPage === 'pendientes') {
+              return <PedidosPendientesView onBack={() => setCurrentPage('home')} onSync={handleSync} onEditPedido={handleEditPedido} onDeletePedido={handleDeletePendingPedido} />;
+          }
+          
           return (
             <React.Fragment>
-              {currentPage === 'home' && <VendedorHomePage user={user} onLogout={handleLogout} setCurrentPage={setCurrentPage} />}
-              {currentPage === 'clientes' && <ClientesView onBack={() => setCurrentPage('home')} onSelectCliente={handleSelectCliente} onEditCliente={(c) => { setEditingCliente(c); setCurrentPage('cliente_form'); }} onAddCliente={() => { setEditingCliente(null); setCurrentPage('cliente_form'); }} />}
-              {currentPage === 'cliente_form' && <ClienteFormView onBack={() => setCurrentPage('clientes')} cliente={editingCliente} onSave={handleSaveCliente} />}
-              {currentPage === 'pedido' && selectedCliente && <PedidoView cliente={selectedCliente} onBack={(cart) => { setCurrentPedido(cart); setCurrentPage('clientes'); }} onShowCart={(pedido) => { setCurrentPedido(pedido); setCurrentPage('summary'); }} cart={currentPedido} onProductSelect={handleProductSelect} />}
-              {currentPage === 'summary' && selectedCliente && <PedidoSummaryView cliente={selectedCliente} pedido={currentPedido} setPedido={setCurrentPedido} onBack={(cart) => { setCurrentPedido(cart); setCurrentPage('pedido'); }} onSave={handleSavePedido} editingPedido={editingPedido} onCancelEdit={handleCancelEdit} onAddMoreProducts={(cart) => { setCurrentPedido(cart); setCurrentPage('pedido'); }} />}
-              {currentPage === 'pendientes' && <PedidosPendientesView onBack={() => setCurrentPage('home')} onSync={handleSync} onEditPedido={handleEditPedido} onDeletePedido={handleDeletePendingPedido} />}
-              
+              <VendedorHomePage user={user} onLogout={handleLogout} setCurrentPage={setCurrentPage} />
               {productForQuantity && (
                   <QuantityModal 
                       product={productForQuantity}
@@ -520,6 +531,13 @@
           );
         }
         ReactDOM.render(<App />, document.getElementById('root'));
+    </script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./sw.js').then(reg => console.log('SW Registrado!', reg)).catch(err => console.log('Error SW:', err));
+            });
+        }
     </script>
 </body>
 </html>
