--- a/ventas.html
+++ b/ventas.html
@@ -9,7 +9,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    {/* ✨ CORRECCIÓN: Se actualizó el script de Babel a la versión 7 */}
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body class="bg-gray-100">
     <div id="root"></div>
@@ -522,7 +523,8 @@
               {productForQuantity && (
                   <QuantityModal 
                       product={productForQuantity}
-                      existingQuantity={currentPedido.find(item => item.producto.id === productForQuantity.id)?.cantidad || 0}
+                      // ✨ CORRECCIÓN: Se cambió la sintaxis para evitar errores en navegadores o versiones de Babel antiguas
+                      existingQuantity={(currentPedido.find(item => item.producto.id === productForQuantity.id) || {}).cantidad || 0}
                       onSave={handleSaveQuantity}
                       onCancel={() => setProductForQuantity(null)}
                   />
