--- a/ventas.html
+++ b/ventas.html
@@ -14,8 +14,8 @@
 <body class="bg-gray-100">
     <div id="root"></div>
     <script type="text/babel">
-        // Definición de la URL de la API
-        const API_URL = 'https://distriapi.onzacore.site';
+        // CORRECCIÓN: URL de la API completa
+        const API_URL = 'https://distriapi.onzacore.site/api';
 
         // --- Componentes de Iconos (Sin cambios) ---
         const PackageIcon = (props) => (<svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M16.5 9.4a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0Z"/><path d="M19 13.3a9 9 0 1 1-14 0"/><path d="M12 17.5a2.5 2.5 0 0 1-2.5-2.5V9.4h5v5.6a2.5 2.5 0 0 1-2.5 2.5Z"/></svg>);
@@ -120,7 +120,7 @@
             return (
                 <div className="flex flex-col h-screen bg-gray-100">
                     <header className="bg-white p-4 shadow-md sticky top-0 flex items-center gap-4 z-10">
-                        <button onClick={onBack} className="text-blue-600"><ArrowLeftIcon className="h-6 w-6"/></button>
+                        <button onClick={() => onBack(cart)} className="text-blue-600"><ArrowLeftIcon className="h-6 w-6"/></button>
                         <div><h2 className="font-bold text-lg">{cliente.nombre_comercio}</h2><p className="text-xs text-gray-500">Nuevo Pedido</p></div>
                     </header>
                     <div className="p-4"><input type="text" placeholder="Buscar producto..." value={searchTerm} onChange={e => setSearchTerm(e.target.value)} className="w-full px-4 py-2 mb-4 border rounded-lg"/></div>
@@ -143,7 +143,7 @@
                     </main>
                     {cart.length > 0 && (
                         <footer className="bg-white p-4 shadow-inner fixed bottom-0 w-full border-t">
-                            <button onClick={onShowCart} className="w-full bg-blue-600 text-white font-bold py-3 rounded-lg flex justify-between items-center">
+                            <button onClick={() => onShowCart(cart)} className="w-full bg-blue-600 text-white font-bold py-3 rounded-lg flex justify-between items-center">
                                 <div className="flex items-center gap-2"><ShoppingCartIcon className="h-6 w-6"/><span>{cart.reduce((acc, item) => acc + item.cantidad, 0)} items</span></div>
                                 <span>Ver Pedido</span><span>${cart.reduce((acc, item) => acc + (item.producto.precio_unitario * item.cantidad), 0).toFixed(2)}</span>
                             </button>
@@ -170,11 +170,11 @@
             return (
                  <div className="flex flex-col h-screen bg-gray-100">
                     <header className="bg-white p-4 shadow-md sticky top-0 flex items-center gap-4 z-10">
-                        <button onClick={onBack} className="text-blue-600"><ArrowLeftIcon className="h-6 w-6"/></button>
+                        <button onClick={() => onBack(pedido)} className="text-blue-600"><ArrowLeftIcon className="h-6 w-6"/></button>
                         <div><h2 className="font-bold text-lg">{editingPedido ? 'Editar Pedido' : 'Revisar Pedido'}</h2><p className="text-xs text-gray-500">{cliente.nombre_comercio}</p></div>
                     </header>
                     <main className="flex-1 overflow-y-auto p-4">
-                        <button onClick={onAddMoreProducts} className="w-full bg-blue-100 text-blue-800 font-semibold py-3 rounded-lg mb-4 flex items-center justify-center gap-2">
+                        <button onClick={() => onAddMoreProducts(pedido)} className="w-full bg-blue-100 text-blue-800 font-semibold py-3 rounded-lg mb-4 flex items-center justify-center gap-2">
                            <PlusIcon className="h-5 w-5"/> Agregar más productos
                         </button>
                         {pedido.length === 0 && <p className="text-center text-gray-500 mt-8">El carrito está vacío.</p>}
@@ -272,7 +272,7 @@
                             <h3 className="text-lg font-bold text-gray-800">{product.nombre}</h3>
                             <p className="text-blue-600 font-bold mb-4">${product.precio_unitario}</p>
                             <div className="flex items-center justify-center gap-4">
-                                <button onClick={() => setQuantity(q => Math.max(0, parseInt(q,10) - 1))} className="w-10 h-10 bg-gray-200 rounded-full font-bold text-xl">-</button>
+                                <button onClick={() => setQuantity(q => Math.max(0, (parseInt(q,10) || 0) - 1))} className="w-10 h-10 bg-gray-200 rounded-full font-bold text-xl">-</button>
                                 <input 
                                     type="number"
                                     value={quantity}
@@ -296,7 +296,7 @@
             const [formData, setFormData] = React.useState({ nombre_comercio: '', nombre_contacto: '', direccion: '', telefono: '' });
             const isEditing = cliente !== null;
             React.useEffect(() => {
-                if (isEditing) { setFormData(cliente); }
+                if (isEditing) { setFormData(cliente); } else { setFormData({ nombre_comercio: '', nombre_contacto: '', direccion: '', telefono: '' });}
             }, [cliente, isEditing]);
             const handleChange = (e) => {
                 const { name, value } = e.target;
@@ -407,7 +407,7 @@
               const token = localStorage.getItem('vendedor_token');
               const isOnline = navigator.onLine;
 
-              if (isOnline && token && clienteData.id && !clienteData.id.toString().startsWith('local_')) {
+              if (isOnline && token && clienteData.id && String(clienteData.id).startsWith('local_') === false) {
                   try {
                       const url = clienteData.id ? `${API_URL}/clientes/${clienteData.id}` : `${API_URL}/clientes`;
                       const method = clienteData.id ? 'PUT' : 'POST';
@@ -426,9 +426,9 @@
               }
 
               let clientes = JSON.parse(localStorage.getItem('clientes') || '[]');
-              if (clienteData.id && !clienteData.id.toString().startsWith('local_')) { 
+              if (clienteData.id && String(clienteData.id).startsWith('local_') === false) { 
                   clientes = clientes.map(c => c.id === clienteData.id ? { ...c, ...clienteData, status: 'pending_update' } : c);
-              } else if (clienteData.id && clienteData.id.toString().startsWith('local_')) {
+              } else if (clienteData.id && String(clienteData.id).startsWith('local_')) {
                    clientes = clientes.map(c => c.id === clienteData.id ? { ...c, ...clienteData } : c);
               } else {
                   clientes.push({ ...clienteData, id: `local_${Date.now()}`, status: 'pending_create' });
@@ -502,61 +502,34 @@
               });
               setProductForQuantity(null);
           };
-
-          // --- Lógica de Renderizado ---
-          let pageComponent;
-
-          if (!token || !user) {
-              pageComponent = <LoginPage onLogin={handleLogin} loading={loading} error={error} />;
-          } else if (currentPage === 'clientes') {
-              pageComponent = <ClientesView 
-                onBack={() => setCurrentPage('home')} 
-                onSelectCliente={handleSelectCliente} 
-                onEditCliente={(c) => { setEditingCliente(c); setCurrentPage('cliente_form'); }} 
-                onAddCliente={() => { setEditingCliente(null); setCurrentPage('cliente_form'); }} 
-              />;
-          } else if (currentPage === 'cliente_form') {
-              pageComponent = <ClienteFormView 
-                onBack={() => setCurrentPage('clientes')} 
-                cliente={editingCliente} 
-                onSave={handleSaveCliente} 
-              />;
-          } else if (currentPage === 'pedido' && selectedCliente) {
-              pageComponent = <PedidoView 
-                cliente={selectedCliente} 
-                onBack={() => { setCurrentPage('clientes'); setCurrentPedido([]); }} 
-                onShowCart={() => setCurrentPage('summary')} 
-                cart={currentPedido} 
-                onProductSelect={handleProductSelect} 
-              />;
-          } else if (currentPage === 'summary' && selectedCliente) {
-              pageComponent = <PedidoSummaryView 
-                cliente={selectedCliente} 
-                pedido={currentPedido} 
-                setPedido={setCurrentPedido} 
-                onBack={() => setCurrentPage('pedido')} 
-                onSave={handleSavePedido} 
-                editingPedido={editingPedido} 
-                onCancelEdit={handleCancelEdit} 
-                onAddMoreProducts={() => setCurrentPage('pedido')} 
-              />;
-          } else if (currentPage === 'pendientes') {
-              pageComponent = <PedidosPendientesView 
-                onBack={() => setCurrentPage('home')} 
-                onSync={handleSync} 
-                onEditPedido={handleEditPedido} 
-                onDeletePedido={handleDeletePendingPedido} 
-              />;
-          } else {
-              pageComponent = <VendedorHomePage user={user} onLogout={handleLogout} setCurrentPage={setCurrentPage} />;
-          }
           
+          // --- Lógica de Renderizado ---
+          const renderPage = () => {
+              if (currentPage === 'clientes') {
+                  return <ClientesView onBack={() => setCurrentPage('home')} onSelectCliente={handleSelectCliente} onEditCliente={(c) => { setEditingCliente(c); setCurrentPage('cliente_form'); }} onAddCliente={() => { setEditingCliente(null); setCurrentPage('cliente_form'); }} />;
+              }
+              if (currentPage === 'cliente_form') {
+                  return <ClienteFormView onBack={() => setCurrentPage('clientes')} cliente={editingCliente} onSave={handleSaveCliente} />;
+              }
+              if (currentPage === 'pedido' && selectedCliente) {
+                  return <PedidoView cliente={selectedCliente} onBack={(cart) => { setCurrentPedido(cart); setCurrentPage('clientes'); }} onShowCart={() => setCurrentPage('summary')} cart={currentPedido} onProductSelect={handleProductSelect} />;
+              }
+              if (currentPage === 'summary' && selectedCliente) {
+                  return <PedidoSummaryView cliente={selectedCliente} pedido={currentPedido} setPedido={setCurrentPedido} onBack={() => setCurrentPage('pedido')} onSave={handleSavePedido} editingPedido={editingPedido} onCancelEdit={handleCancelEdit} onAddMoreProducts={() => setCurrentPage('pedido')} />;
+              }
+              if (currentPage === 'pendientes') {
+                  return <PedidosPendientesView onBack={() => setCurrentPage('home')} onSync={handleSync} onEditPedido={handleEditPedido} onDeletePedido={handleDeletePendingPedido} />;
+              }
+              return <VendedorHomePage user={user} onLogout={handleLogout} setCurrentPage={setCurrentPage} />;
+          };
+          
+          if (!token || !user) {
+              return <LoginPage onLogin={handleLogin} loading={loading} error={error} />;
+          }
+
           return (
             <React.Fragment>
-              {/* Se renderiza la página actual */}
-              {pageComponent}
-
-              {/* El modal ahora vive fuera del enrutador de páginas y puede aparecer en cualquier vista */}
+              {renderPage()}
               {productForQuantity && (
                   <QuantityModal 
                       product={productForQuantity}
